#386: fixed list creation